<resources>
    <string name="app_name">JournalPerso</string>
    <string name="labelLogin">Login</string>
    <string name="labelPassword">Password</string>
    <string name="buttonSubscribe">Inscription</string>
    <string name="buttonConnexion">Connexion</string>
    <string name="labelChixConnexion">Ou</string>
    <string name="labelNewNom">Nom</string>
    <string name="labelNewPrenom">Prenom</string>
    <string name="labelNewMail">E-Mail</string>
    <string name="labelPasswordConfirm">Confirmer le mot de passe</string>
    <string name="buttonConfirmSubscribe">M\'inscrire</string>
    <string name="title_activity_menu">menuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
