<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnexionActivity">

    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelPasswordConfirm"
        app:layout_constraintBottom_toTopOf="@+id/passwordUserConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordUser" />

    <EditText
        android:id="@+id/passwordUserConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogin"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/nomUser"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/labelNom"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/labelNewNom"
        app:layout_constraintBottom_toTopOf="@+id/nomUser"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="31dp"
        android:text="@string/buttonConfirmSubscribe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordUserConfirm" />

    <EditText
        android:id="@+id/emailUser"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmailUser"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/mailUser"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPrenom3"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelPassword"
        app:layout_constraintBottom_toTopOf="@+id/passwordUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailUser" />

    <TextView
        android:id="@+id/labelEmailUser"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelNewPrenom"
        app:layout_constraintBottom_toTopOf="@+id/emailUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomUser" />

    <TextView
        android:id="@+id/labelPrenom3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelNewMail"
        app:layout_constraintBottom_toTopOf="@+id/mailUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUser" />

</androidx.constraintlayout.widget.ConstraintLayout>