<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonAccepteModificationEspace2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="320dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:src="@drawable/ic_done_all_black_24dp"
        app:backgroundTint="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelPasswordConfirm"
        app:layout_constraintBottom_toTopOf="@+id/passwordUserConfirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordUser" />

    <EditText
        android:id="@+id/passwordUserConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:text="dddddddd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelLogin" />

    <EditText
        android:id="@+id/nomUser"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="124dp"
        android:text="Potter"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelNom"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:text="@string/labelNewNom"
        app:layout_constraintBottom_toTopOf="@+id/nomUser"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/emailUser"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="Harry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmailUser" />

    <EditText
        android:id="@+id/mailUser"
        android:layout_width="213dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:text="monMail@gmail.com"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPrenom3" />

    <EditText
        android:id="@+id/passwordUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:text="dddddddd"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelPassword" />

    <TextView
        android:id="@+id/labelPassword"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelPassword"
        app:layout_constraintBottom_toTopOf="@+id/passwordUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailUser" />

    <TextView
        android:id="@+id/labelEmailUser"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelNewPrenom"
        app:layout_constraintBottom_toTopOf="@+id/emailUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomUser" />

    <TextView
        android:id="@+id/labelPrenom3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:text="@string/labelNewMail"
        app:layout_constraintBottom_toTopOf="@+id/mailUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailUser" />

</androidx.constraintlayout.widget.ConstraintLayout>